fix: corrige deduplicacao e fluxo de persistencia